@@ -43,6 +43,7 @@ using namespace std;
 #include "CommandDownload.h"
 #include "CommandFoeRead.h"
 #include "CommandFoeWrite.h"
+#include "CommandGraph.h"
 #include "CommandMaster.h"
 #include "CommandPdos.h"
 #include "CommandRegRead.h"
@@ -297,6 +298,7 @@ int main(int argc, char **argv)
     commandList.push_back(new CommandDownload());
     commandList.push_back(new CommandFoeRead());
     commandList.push_back(new CommandFoeWrite());
+    commandList.push_back(new CommandGraph());
     commandList.push_back(new CommandMaster());
     commandList.push_back(new CommandPdos());
     commandList.push_back(new CommandRegRead());
